[gd_scene load_steps=5 format=3 uid="uid://bgvfjindfxypf"]

[ext_resource type="Script" uid="uid://bn420gixqw0ki" path="res://addons/diisis/editor/src/facts.gd" id="1_7jlfu"]
[ext_resource type="Texture2D" uid="uid://co44uwwjikn2w" path="res://addons/diisis/editor/visuals/theme/buttons_ui/fact.png" id="2_tww56"]
[ext_resource type="Texture2D" uid="uid://c73q5hs7874s2" path="res://addons/diisis/editor/visuals/theme/buttons_ui/fact_add.png" id="3_351dh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3fnj"]
bg_color = Color(0.09, 0.0189, 0.08052, 0.105882)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.0110876, 0.0110876, 0.0110876, 1)
border_blend = true

[node name="Facts" type="PanelContainer" node_paths=PackedStringArray("facts_container")]
custom_minimum_size = Vector2(183.315, 0)
offset_right = 183.315
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q3fnj")
script = ExtResource("1_7jlfu")
address_depth = 1
facts_container = NodePath("VBox/FactsContainer")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="VisibilityToggleButton" type="CheckButton" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
icon = ExtResource("2_tww56")

[node name="Controls" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="AddFactButton" type="Button" parent="VBox/Controls"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "add fact"
icon = ExtResource("3_351dh")

[node name="PuppyLabel" type="Label" parent="VBox/Controls"]
layout_mode = 2

[node name="FactsContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[connection signal="pressed" from="VBox/Controls/AddFactButton" to="." method="request_add_fact"]
